--- a/app/src/main/res/layout/fragment_gio_hang.xml
+++ b/app/src/main/res/layout/fragment_gio_hang.xml
@@ -1,14 +1,60 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- activity_shopping_cart.xml -->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingTop="16dp"
+    android:paddingRight="16dp"
+    android:paddingBottom="16dp"
     tools:context=".fragments.GioHangFragment">
-
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Giỏ Hàng"
+        android:textStyle="bold"
+        android:textSize="26dp"
+        android:layout_marginLeft="125dp"/>
 
-</FrameLayout>
+    <ListView
+        android:id="@+id/listViewCart"
+        android:layout_width="match_parent"
+        android:layout_marginTop="40dp"
+        android:layout_height="400dp"
+        android:dividerHeight="0.5dp"
+        android:layout_marginBottom="8dp"/>
+
+    <Spinner
+        android:id="@+id/spinnerPaymentMethod"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/listViewCart"
+        android:layout_marginTop="8dp"
+        android:padding="8dp" />
+
+    <EditText
+        android:id="@+id/etDiscountCode"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinnerPaymentMethod"
+        android:layout_marginTop="8dp"
+        android:hint="Discount Code"/>
+
+    <Button
+        android:id="@+id/btnApplyDiscount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etDiscountCode"
+        android:layout_marginTop="8dp"
+        android:text="Apply Discount"/>
+
+    <Button
+        android:id="@+id/btnCheckout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:text="Checkout"
+        android:textColor="#ffffff"
+        android:padding="16dp"/>
+</RelativeLayout>
