--- a/app/src/main/res/layout/activity_danh_gia.xml
+++ b/app/src/main/res/layout/activity_danh_gia.xml
@@ -1,9 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DanhGiaActivity">
+    tools:context=".activities.DanhGiaActivity"
+    android:orientation="vertical"
+    >
+    <RatingBar
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:rating="0"
+        android:stepSize="1"
+        android:layout_gravity="center"
+        android:layout_marginTop="32dp"/>
+
+    <LinearLayout
+        android:padding="10dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <!-- Add other views as needed -->
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nhận xét:"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp" />
+        <TextView
+            android:layout_width="410dp"
+            android:layout_height="158dp"
+            android:textSize="24dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            />
+    </LinearLayout>
+
+
+    <Button
+        android:id="@+id/btnGuidanhgia"
+        android:layout_width="266dp"
+        android:layout_height="51dp"
+        android:text="Gửi đánh giá"
+        android:textSize="25dp"
+        android:background="#FF4081"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp" />
+
+</LinearLayout>
+
