--- a/app/src/main/res/layout/fragment_thong_ke.xml
+++ b/app/src/main/res/layout/fragment_thong_ke.xml
@@ -42,54 +42,78 @@
         tools:ignore="MissingConstraints" />
 
     <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="15dp"
         android:layout_height="15dp"
+        android:layout_marginTop="224dp"
         android:src="@drawable/circle_24"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="323dp"
+        app:layout_constraintEnd_toStartOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn1"
         tools:ignore="MissingConstraints" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="212dp"
+        android:layout_marginEnd="200dp"
         android:text="Doanh thu    :"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="315dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn1"
         tools:ignore="MissingConstraints" />
+
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="15dp"
         android:layout_height="15dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="48dp"
         android:src="@drawable/circle_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="392dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        tools:ignore="MissingConstraints" />
+
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="200dp"
         android:text="Chi phí          :"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="387dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:layout_width="15dp"
         android:layout_height="15dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/circle_24"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="40dp"
-        tools:layout_editor_absoluteY="467dp" />
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        tools:ignore="MissingConstraints" />
+
     <TextView
+        android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="196dp"
         android:text="Lợi nhuận     :"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="460dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
