update Type Food

--- a/app/src/main/res/layout/activity_them_mon_an.xml
+++ b/app/src/main/res/layout/activity_them_mon_an.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/edtNameFood"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
         app:boxCornerRadiusTopStart="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+        app:layout_constraintTop_toBottomOf="@+id/edtNameFood">
 
         <AutoCompleteTextView
             android:id="@+id/auto_complete_txt"
@@ -167,6 +167,8 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:onClick="buttonClick"
+        android:id="@+id/btnAddFood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
