Revert "(phapdv) thêm upload image"
This reverts commit 2371be969f56f082500b4c9beeccc7d8deec24c2.

--- a/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
+++ b/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
@@ -88,7 +88,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:hint="https:/www.facebook/..."
+                android:hint="https:/www.facebook.comlocale=vi_VN"
                 android:textColor="@color/pink"
                 android:textSize="12dp" />
 
