--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="grayMedium">#D3D3D3</color>
     <color name="grayLight">#F7F7F8</color>
     <color name="grayText">#707070</color>
+    <color name="selected_item_color">#FF9800</color>
+
 </resources>
